--- a/Fumigabot/app/src/main/res/layout/fragment_quimicos.xml
+++ b/Fumigabot/app/src/main/res/layout/fragment_quimicos.xml
@@ -47,7 +47,7 @@
         <ListView
             android:id="@+id/listaEntradaQuimicos"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="1dp"
             android:divider="@null"
@@ -88,7 +88,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
-            android:backgroundTint="?attr/colorPrimary"
+            android:backgroundTint="?attr/colorSecondary"
             android:src="@drawable/ic_add_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
