[Diseño] Definición de temas y colores

--- a/Fumigabot/app/src/main/res/values-night/themes.xml
+++ b/Fumigabot/app/src/main/res/values-night/themes.xml
@@ -3,10 +3,14 @@
     <!--Top level DayNight theme to be used in AndroidManifest.xml-->
     <style name="Theme.Defy" parent="Base.Theme.Defy">
         <!--Material color attributes (dark theme) -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_600</item>
-        <item name="colorSecondary">@color/green_200</item>
-        <item name="colorSecondaryVariant">@color/green_500</item>
+        <!--item name="colorPrimary">@color/purple_200</item-->
+        <item name="colorPrimary">@color/dark_main_defy</item>
+        <!--item name="colorPrimaryVariant">@color/purple_600</item-->
+        <item name="colorPrimaryVariant">@color/dark_main_variant_defy</item>
+        <!--item name="colorSecondary">@color/green_200</item-->
+        <item name="colorSecondary">@color/secondary_defy</item>
+        <!--item name="colorSecondaryVariant">@color/green_500</item-->
+        <item name="colorSecondaryVariant">@color/secondary_variant_defy</item>
         <item name="android:colorBackground">@color/black_900</item>
         <item name="colorSurface">@color/black_800</item>
         <item name="colorError">@color/red_200</item>
