--- a/Fumigabot/app/src/main/res/layout/entrada_historial.xml
+++ b/Fumigabot/app/src/main/res/layout/entrada_historial.xml
@@ -5,14 +5,14 @@
     android:id="@+id/entradaHistorialLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:maxHeight="65dp"
+    android:maxHeight="77dp"
     android:orientation="vertical">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:maxHeight="65dp">
+        android:maxHeight="77dp">
 
         <TextView
             android:id="@+id/fechaFumigacion"
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="2dp"
             android:layout_marginBottom="16dp"
             android:gravity="bottom"
             android:maxHeight="20dp"
@@ -64,7 +64,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fechaFumigacion"
             app:layout_constraintVertical_bias="0.50" />
 
         <ImageView
@@ -86,7 +86,7 @@
             android:id="@+id/alertaMaxima"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="28dp"
             android:tint="?attr/colorError"
             android:visibility="gone"
