--- a/Fumigabot/app/src/main/res/layout/fragment_step1.xml
+++ b/Fumigabot/app/src/main/res/layout/fragment_step1.xml
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/card_layout_margin"
-            android:text="Elegí el día y la hora que consideres adecuada para realizar la fumigación o desinfección. También podrás indicar si querés que la misma se realice de forma diaria."
+            android:text="Elegí el día y la hora que consideres adecuada para realizar la fumigación o desinfección. También podrás indicar si querés que la misma se repita semanalmente."
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -163,7 +163,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:text="Repetir diariamente"
+                android:text="Repetir semanalmente"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -213,7 +213,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="16dp"
                 android:text="Actualmente se encuentra una fumigación en curso. Si se desea comenzar una instantánea, es necesario detenerla."
                 android:textColor="@color/devOcupado"
                 app:layout_constraintBottom_toBottomOf="parent"
