--- a/Fumigabot/app/src/main/res/layout/activity_detalle_fumigacion_programada.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_detalle_fumigacion_programada.xml
@@ -7,10 +7,47 @@
     tools:context=".DetalleFumigacionProgramadaActivity">
 
     <TextView
+        android:id="@+id/textView21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:text="Cambiá el día y la hora"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quimicoProgramada"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/txtEsRecurrente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/nav_background_rounded"
+        android:backgroundTint="@color/secondary_variant_defy"
+        android:gravity="center"
+        android:paddingLeft="6dp"
+        android:paddingTop="3dp"
+        android:paddingRight="6dp"
+        android:paddingBottom="3dp"
+        android:text="Recurrente"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/fechaProgramada"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.079" />
+
+    <TextView
         android:id="@+id/quimicoProgramada"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:gravity="center"
         android:text="Amonio Cuaternario"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,8 +61,8 @@
         android:id="@+id/imgQuimicoUsado2"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
         app:contentPadding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,12 +76,12 @@
         android:id="@+id/imgCantidad2"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="72dp"
         android:scaleType="fitEnd"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.873"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fechaProgramada"
         app:layout_constraintVertical_bias="0.0"
@@ -54,7 +91,7 @@
         android:id="@+id/cantidadProgramada"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
         android:text="Alta"
@@ -67,15 +104,14 @@
 
     <CalendarView
         android:id="@+id/calendarioProgramada"
-        android:layout_width="405dp"
-        android:layout_height="305dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fechaProgramada"
+        app:layout_constraintTop_toBottomOf="@+id/textView21"
         app:layout_constraintVertical_bias="0.0" />
 
     <TimePicker
@@ -83,7 +119,6 @@
         android:layout_width="253dp"
         android:layout_height="138dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="ej. 13:30"
