--- a/Fumigabot/app/src/main/res/layout/activity_configurar_robot.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_configurar_robot.xml
@@ -118,7 +118,7 @@
         android:text="100%"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
         app:layout_constraintTop_toBottomOf="@+id/txtInfoBateriaConfig"
