--- a/Fumigabot/app/src/main/res/layout/activity_detalle_fumigacion_programada.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_detalle_fumigacion_programada.xml
@@ -26,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="7dp"
         android:background="@drawable/nav_background_rounded"
         android:backgroundTint="@color/secondary_variant_defy"
         android:gravity="center"
@@ -40,8 +41,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/fechaProgramada"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.079" />
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/quimicoProgramada"
